style.css
:root {
    --clr-dark: hsl(300, 43%, 22%);
    --clr-primary: hsl(333, 80%, 67%);
    --clr-fade: hsl(303, 10%, 53%);
    --clr-light: hsl(300, 24%, 96%);
    --clr-white: hsl(300, 24%, 96%);
    --bottom-gap: 3rem;
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    position: relative;
    font-family: Spartan, sans-serif;
    font-size: 15px;
}

body::before {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url('images/bg-pattern-top-mobile.svg');
    background-repeat: no-repeat;
    z-index: -1;
}

body::after {
    position: absolute;
    content: '';
    left: 0;
    right: 0;
    top: calc(100% - 503px);
    bottom: 0;
    background-image: url('images/bg-pattern-bottom-mobile.svg');
    background-repeat: no-repeat;
    z-index: -1;
}

.container {
    margin: 0 auto;
    width: 90%;
    max-width: 1440px;
    padding: 5rem 0;
}

header {
    text-align: center;
    margin-bottom: var(--bottom-gap);
}

header h1 {
    font-size: 2rem;
    color: var(--clr-dark);
    width: 80%;
    margin: 0 auto;
    line-height: 1;
    letter-spacing: -1px;
    margin-bottom: 1.5rem;
}

header p {
    color: var(--clr-fade);
    font-size: 0.92rem;
    line-height: 1.5;
    margin-bottom: 2rem;
}

.ratings {
    display: grid;
    gap: 1rem;
    margin-bottom: var(--bottom-gap);
}

.rating {
    background-color: var(--clr-light);
    text-align: center;
    padding: 0.5rem 0 1rem;
    font-weight: 700;
    color: var(--clr-dark);
    border-radius: 8px;
    font-size: 0.8rem;
}

.rating .stars svg {
    margin: 0 0.2rem 0.1rem;
}

.testimonials {
    display: grid;
    gap: 1rem;
    margin-bottom: var(--bottom-gap);
}

.testimonial {
    background-color: var(--clr-dark);
    border-radius: 8px;
    padding: 2rem;
    color: var(--clr-light);
    font-size: 0.8rem;
}

.contributor {
    display: grid;
    grid-template-columns: 2.5rem 1fr;
    gap: 1.5rem;
    margin-bottom: 2rem;
    align-items: center;
}

.contributor img {
    width: 2.5rem;
    border-radius: 50%;
}

.contributor .name {
    font-weight: 700;
    margin-bottom: 0.3rem;
}

.contributor .description {
    font-weight: 500;
    color: var(--clr-primary);
}

.testimonial p {
    line-height: 1.6;
    font-size: 0.825rem;
}

.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

@media (min-width: 1440px) {
     :root {
        --bottom-gap: 2rem;
    }
    body::before {
        background-image: url('images/bg-pattern-top-desktop.svg');
    }
    body::after {
        left: calc(100% - 1085px);
        top: calc(100% - 673px);
        background-image: url('images/bg-pattern-bottom-desktop.svg');
    }
    .container {
        width: 75%;
        display: grid;
        grid-template-columns: auto auto;
        gap: 10%;
        padding: 8rem 0;
    }
    header {
        text-align: left;
    }
    header h1 {
        margin-left: 0;
        font-size: 3rem;
    }
    header p {
        max-width: 37ch;
    }
    .rating {
        width: 80%;
        display: flex;
        align-items: center;
        padding: 0.75rem 2rem;
        height: min-content;
        gap: 2rem;
    }
    .rating .stars img,
    .rating .stars svg {
        margin-bottom: 0;
    }
    .rating:nth-child(2) {
        margin-left: 3rem;
    }
    .rating:nth-child(3) {
        margin-left: 6rem;
    }
    .rating .stars {
        margin-bottom: 0;
    }
    .testimonials {
        grid-column: 1 / -1;
        display: flex;
        gap: 2rem;
    }
    .testimonial {
        height: min-content;
        width: 30%;
    }
    .testimonial:nth-child(2) {
        margin-top: 1rem;
    }
    .testimonial:nth-child(3) {
        margin-top: 2rem;
    }
    .attribution {
        grid-column: 1 / -1;
    }
}

